# photobooth-react

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml  pages.yml  windows-installer.yml
public/: manifest.webmanifest  sw.js
server/: README.md
src/: App.tsx  main.tsx  services.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AdminIntegrationsPanel.tsx  CameraPanel.tsx  ControlPanel.tsx  CountdownOverlay.tsx  GalleryHistory.tsx  PhotoStrip.tsx  PrintEditor.tsx
src/hooks/: useCamera.ts  useCountdown.ts
src/types/: index.ts
src/utils/: capture.ts  printEdits.ts  strip.ts
