[package]
name = "photobooth-react"
version = "0.1.0"
description = "React + Tauri starter for a photobooth app"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "photobooth_react_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.4.1", features = [] }

